--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -10,13 +10,10 @@
     }
 
     .banner {
-        background-image: linear-gradient(to right, #33b1ff, #5ba4ff, #8992ff, #b57bf5, #db5ddb, #f644b2, #ff3487, #ff385b, #ff6a1e, #f5a100, #c0d300, #48ff00);
-        color: var(--white);
-    }
-
-    .banner {
         font-family: var(--font-family-Eng);
         contain: paint;
+        background-image: linear-gradient(to right, #33b1ff, #5ba4ff, #8992ff, #b57bf5, #db5ddb, #f644b2, #ff3487, #ff385b, #ff6a1e, #f5a100, #c0d300, #48ff00);
+        color: var(--white);
 
         .splide__track {
             .splide__list {
@@ -35,9 +32,9 @@
     .work-desc {
         .desc-index {
             li {
-                .summary {
-                    font-family: 'Pretendard-Regular';
-                }
+
+                font-family: 'Pretendard-Regular';
+
             }
         }
     }
@@ -49,6 +46,108 @@
 
     .work-list {
         contain: paint;
+
+        li {
+            overflow: hidden;
+
+            .img01,
+            &.work01::before {
+                background-image: url(/src/assets/work.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img02,
+            &.work02::before {
+                background-image: url(/src/assets/work2.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img03,
+            &.work03::before {
+                background-image: url(/src/assets/work3.webp);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img04,
+            &.work04::before {
+                background-image: url(/src/assets/work4.png);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img05,
+            &.work05::before {
+                background-image: url(/src/assets/work5.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img06,
+            &.work06::before {
+                background-image: url(/src/assets/work6.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img07,
+            &.work07::before {
+                background-image: url(/src/assets/work7.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img08,
+            &.work08::before {
+                background-image: url(/src/assets/work8.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img09,
+            &.work09::before {
+                background-image: url(/src/assets/work9.webp);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img10,
+            &.work10::before {
+                background-image: url(/src/assets/work10.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img11,
+            &.work11::before {
+                background-image: url(/src/assets/work11.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img12,
+            &.work12::before {
+                background-image: url(/src/assets/work12.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img13,
+            &.work13::before {
+                background-image: url(/src/assets/work13.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+
+            .img14,
+            &.work14::before {
+                background-image: url(/src/assets/work14.jpg);
+                background-repeat: no-repeat;
+                background-position: center center;
+            }
+        }
     }
 }
 
@@ -317,7 +416,7 @@
 
                             p {
                                 color: var(--mainColor100-color);
-                                font-size: 7rem;
+                                font-size: 2rem;
                                 font-weight: 300;
                                 transform: translateY(50px);
                                 transition: .35s;
@@ -349,6 +448,63 @@
                         height: 400px;
                         position: relative;
 
+                        &:hover .img-box {
+                            clip-path: circle(100% at 50% 50%);
+                            filter: brightness(1);
+                        }
+
+                        &:hover .img01 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img02 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img03 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img04 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img05 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img06 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img07 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img08 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img09 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img10 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img11 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img12 {
+                            filter: brightness(.6);
+                        }
+
+                        &:hover .img13 {
+                            filter: brightness(.6);
+                        }
+
                         &::before {
                             content: '';
                             position: absolute;
@@ -370,18 +526,30 @@
                             height: 100%;
                             overflow: hidden;
 
-                            img {
-                                object-fit: cover;
-                                filter: brightness(.5) blur(3px);
-                                transition: .5s;
+                            .img-box {
+                                position: absolute;
+                                top: 0;
+                                left: 0;
+                                width: 100%;
+                                height: 100%;
+                                background-position: center center;
+                                background-size: cover;
+                                background-repeat: no-repeat;
+                                /* 마스크 이용해서 안보이게 하는 영역 */
+                                clip-path: circle(20% at 50% 50%);
+                                transition: .6s;
                             }
 
-                            &.on img {
-                                filter: brightness(1) blur(0);
-                            }
-
-                            &:hover img {
-                                transform: scale(1.07);
+                            .list-title {
+                                position: absolute;
+                                bottom: 0%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                                color: var(--white);
+                                z-index: 99;
+                                text-align: center;
+                                font-size: 20rem;
+                                width: 100%;
                             }
                         }
                     }
@@ -460,7 +628,7 @@
                 }
 
                 .desc-index {
-                    width: 330px;
+                    width: 400px;
                     height: 100%;
                     position: relative;
 
@@ -475,7 +643,7 @@
                         display: flex;
                         align-items: center;
                         justify-content: center;
-                        background-color: var(--black);
+                        // background-color: var(--black);
                         opacity: 0;
 
 
@@ -489,21 +657,33 @@
 
                             p {
                                 color: var(--mainColor100-color);
-                                font-size: 6.3rem;
+                                font-size: 1.3rem;
                                 font-weight: 300;
-                                height: 150px;
+                                line-height: 2rem;
+                                margin-bottom: 30px;
+                            }
 
-
-                                &.br {
-                                    height: 230px;
+                            .summary {
+                                b {
+                                    display: block;
+                                    margin-bottom: 10px;
+                                    font-size: 1.7rem;
+                                }
+                                >div{
+                                    width: 100%;
+                                    height: 50px;
+                                    border: 1px solid #95ff00;
+                                    position: relative;
+                                    z-index: 999;
+                                    
+                                        img{
+                                            width: 50px;
+                                        }
+                                    
                                 }
                             }
 
-                            b {
-                                display: block;
-                                margin-bottom: 10px;
-                                font-size: 1.7rem;
-                            }
+
                         }
                     }
                 }
@@ -544,18 +724,24 @@
                             height: 100%;
                             overflow: hidden;
 
-                            img {
-                                object-fit: cover;
-                                filter: brightness(.5) blur(3px);
-                                transition: .7s;
-                            }
+                            .list-title {
+                                position: absolute;
+                                bottom: 0%;
+                                left: 50%;
+                                transform: translate(-50%, -50%);
+                                color: var(--white);
+                                z-index: 99;
+                                text-align: center;
+                                width: 100%;
 
-                            &.on img {
-                                filter: brightness(1) blur(0);
-                            }
+                                h3 {
+                                    font-size: 2.2rem;
+                                    margin-bottom: 10px;
+                                }
 
-                            &:hover img {
-                                transform: scale(1.07);
+                                p {
+                                    font-size: 1.3rem;
+                                }
                             }
                         }
                     }
