--- a/src/css/pages/work.css
+++ b/src/css/pages/work.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #work {
   background-color: var(--black);
   width: 100%;
@@ -9,12 +10,10 @@
   font-size: 20rem;
 }
 #work .banner {
-  background-image: linear-gradient(to right, #33b1ff, #5ba4ff, #8992ff, #b57bf5, #db5ddb, #f644b2, #ff3487, #ff385b, #ff6a1e, #f5a100, #c0d300, #48ff00);
-  color: var(--white);
-}
-#work .banner {
   font-family: var(--font-family-Eng);
   contain: paint;
+  background-image: linear-gradient(to right, #33b1ff, #5ba4ff, #8992ff, #b57bf5, #db5ddb, #f644b2, #ff3487, #ff385b, #ff6a1e, #f5a100, #c0d300, #48ff00);
+  color: var(--white);
 }
 #work .banner .splide__track .splide__list {
   display: flex;
@@ -24,7 +23,7 @@
   padding: 5px 20px;
   white-space: nowrap;
 }
-#work .work-desc .desc-index li .summary {
+#work .work-desc .desc-index li {
   font-family: "Pretendard-Regular";
 }
 #work .work-title,
@@ -33,6 +32,79 @@
 }
 #work .work-list {
   contain: paint;
+}
+#work .work-list li {
+  overflow: hidden;
+}
+#work .work-list li .img01, #work .work-list li.work01::before {
+  background-image: url(/src/assets/work.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img02, #work .work-list li.work02::before {
+  background-image: url(/src/assets/work2.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img03, #work .work-list li.work03::before {
+  background-image: url(/src/assets/work3.webp);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img04, #work .work-list li.work04::before {
+  background-image: url(/src/assets/work4.png);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img05, #work .work-list li.work05::before {
+  background-image: url(/src/assets/work5.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img06, #work .work-list li.work06::before {
+  background-image: url(/src/assets/work6.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img07, #work .work-list li.work07::before {
+  background-image: url(/src/assets/work7.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img08, #work .work-list li.work08::before {
+  background-image: url(/src/assets/work8.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img09, #work .work-list li.work09::before {
+  background-image: url(/src/assets/work9.webp);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img10, #work .work-list li.work10::before {
+  background-image: url(/src/assets/work10.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img11, #work .work-list li.work11::before {
+  background-image: url(/src/assets/work11.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img12, #work .work-list li.work12::before {
+  background-image: url(/src/assets/work12.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img13, #work .work-list li.work13::before {
+  background-image: url(/src/assets/work13.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+#work .work-list li .img14, #work .work-list li.work14::before {
+  background-image: url(/src/assets/work14.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
 }
 
 @media (max-width: 700px) {
@@ -258,7 +330,7 @@
   }
   #work .inner .work-desc .desc-index li a p {
     color: var(--mainColor100-color);
-    font-size: 7rem;
+    font-size: 2rem;
     font-weight: 300;
     transform: translateY(50px);
     transition: 0.35s;
@@ -284,6 +356,50 @@
     height: 400px;
     position: relative;
   }
+  #work .inner .work-list > div li:hover .img-box {
+    -webkit-clip-path: circle(100% at 50% 50%);
+            clip-path: circle(100% at 50% 50%);
+    filter: brightness(1);
+  }
+  #work .inner .work-list > div li:hover .img01 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img02 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img03 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img04 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img05 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img06 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img07 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img08 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img09 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img10 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img11 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img12 {
+    filter: brightness(0.6);
+  }
+  #work .inner .work-list > div li:hover .img13 {
+    filter: brightness(0.6);
+  }
   #work .inner .work-list > div li::before {
     content: "";
     position: absolute;
@@ -303,17 +419,30 @@
     height: 100%;
     overflow: hidden;
   }
-  #work .inner .work-list > div li a img {
-    -o-object-fit: cover;
-       object-fit: cover;
-    filter: brightness(0.5) blur(3px);
-    transition: 0.5s;
+  #work .inner .work-list > div li a .img-box {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* 마스크 이용해서 안보이게 하는 영역 */
+    -webkit-clip-path: circle(20% at 50% 50%);
+            clip-path: circle(20% at 50% 50%);
+    transition: 0.6s;
   }
-  #work .inner .work-list > div li a.on img {
-    filter: brightness(1) blur(0);
-  }
-  #work .inner .work-list > div li a:hover img {
-    transform: scale(1.07);
+  #work .inner .work-list > div li a .list-title {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--white);
+    z-index: 99;
+    text-align: center;
+    font-size: 20rem;
+    width: 100%;
   }
 }
 @media (min-width: 1100px) {
@@ -373,7 +502,7 @@
     display: block;
   }
   #work .inner .work-desc .desc-index {
-    width: 330px;
+    width: 400px;
     height: 100%;
     position: relative;
   }
@@ -387,7 +516,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--black);
     opacity: 0;
   }
   #work .inner .work-desc .desc-index li.on {
@@ -399,17 +527,25 @@
   }
   #work .inner .work-desc .desc-index li a p {
     color: var(--mainColor100-color);
-    font-size: 6.3rem;
+    font-size: 1.3rem;
     font-weight: 300;
-    height: 150px;
+    line-height: 2rem;
+    margin-bottom: 30px;
   }
-  #work .inner .work-desc .desc-index li a p.br {
-    height: 230px;
-  }
-  #work .inner .work-desc .desc-index li a b {
+  #work .inner .work-desc .desc-index li a .summary b {
     display: block;
     margin-bottom: 10px;
     font-size: 1.7rem;
+  }
+  #work .inner .work-desc .desc-index li a .summary > div {
+    width: 100%;
+    height: 50px;
+    border: 1px solid #95ff00;
+    position: relative;
+    z-index: 999;
+  }
+  #work .inner .work-desc .desc-index li a .summary > div img {
+    width: 50px;
   }
   #work .inner .work-list {
     border: 1px solid #ff0000;
@@ -445,16 +581,21 @@
     height: 100%;
     overflow: hidden;
   }
-  #work .inner .work-list > div li a img {
-    -o-object-fit: cover;
-       object-fit: cover;
-    filter: brightness(0.5) blur(3px);
-    transition: 0.7s;
+  #work .inner .work-list > div li a .list-title {
+    position: absolute;
+    bottom: 0%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: var(--white);
+    z-index: 99;
+    text-align: center;
+    width: 100%;
   }
-  #work .inner .work-list > div li a.on img {
-    filter: brightness(1) blur(0);
+  #work .inner .work-list > div li a .list-title h3 {
+    font-size: 2.2rem;
+    margin-bottom: 10px;
   }
-  #work .inner .work-list > div li a:hover img {
-    transform: scale(1.07);
+  #work .inner .work-list > div li a .list-title p {
+    font-size: 1.3rem;
   }
 }
