--- a/src/css/pages/scss/work.scss
+++ b/src/css/pages/scss/work.scss
@@ -54,14 +54,14 @@
 
             .img01,
             &.work01::before {
-                background-image: url(../../../assets//work1.jpg);
+                background-image: url(../../assets//work1.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img02,
             &.work02::before {
-                background-image: url(../../../assets//work2.jpg);
+                background-image: url(../../assets//work2.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
@@ -75,49 +75,49 @@
 
             .img04,
             &.work04::before {
-                background-image: url(../../../assets//work4.jpg);
+                background-image: url(../../assets//work4.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img05,
             &.work05::before {
-                background-image: url(../../../assets//work5.jpg);
+                background-image: url(../../assets/work5.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img06,
             &.work06::before {
-                background-image: url(../../../assets//work6.jpg);
+                background-image: url(../../assets/work6.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img07,
             &.work07::before {
-                background-image: url(../../../assets//work7.jpg);
+                background-image: url(../../../assets/work7.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img08,
             &.work08::before {
-                background-image: url(../../../assets//work8.jpg);
+                background-image: url(../../assets/work8.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img09,
             &.work09::before {
-                background-image: url(../../../assets//work9.jpg);
+                background-image: url(../../assets/work9.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img10,
             &.work10::before {
-                background-image: url(../../../assets//work10.jpg);
+                background-image: url(../../assets/work10.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
@@ -131,28 +131,28 @@
 
             .img12,
             &.work12::before {
-                background-image: url(../../../assets//work12.jpg);
+                background-image: url(../../assets/work12.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img13,
             &.work13::before {
-                background-image: url(../../../assets//work13.jpg);
+                background-image: url(../../assets/work13.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img14,
             &.work14::before {
-                background-image: url(../../../assets//work14.jpg);
+                background-image: url(../../assets/work14.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
 
             .img15,
             &.work15::before {
-                background-image: url(../../../assets//work15.jpg);
+                background-image: url(../../assets/work15.jpg);
                 background-repeat: no-repeat;
                 background-position: center center;
             }
